--- a/app.json
+++ b/app.json
@@ -34,6 +34,12 @@
         }
       ]
     ],
+    "splash": {
+      "backgroundColor": "#ffffff", 
+      "image": "./assets/images/splash-icon.png", 
+      "resizeMode": "contain",
+      "duration": 3000  
+    },
     "experiments": {
       "typedRoutes": true
     }
